# callisto

./: .dockerignore  .gitignore  Dockerfile  callisto.yaml  pyproject.toml  skaffold.yaml
.github/workflows/: docker-image.yml
callisto/app/agent/: scheduler.py
callisto/libs/use_cases/: session.py
