[tool.poetry]
name = "callisto"
version = "1.0.3"
description = "A service to manage browser pods in k8s"
authors = ["Wrike DevOps team <devops+oss@team.wrike.com>", "Negash <i@negash.ru>"]
license = "MIT"
repository = "https://github.com/negashev/callisto"
keywords = ['web', 'service', 'ci', 'automation']
exclude = ["tests", "*.tests"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
aiojobs = "^1.1.0"
kubernetes_asyncio = "^24.2.3"
typing-extensions = "^4.7.0"
Click = "^8.1.3"
prometheus-client = "^0.17.0"
sentry-sdk = "^1.26.0"
tenacity = "^8.2.2"
graypy = "^2.1.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.3.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
flake8 = ">=3.7.9"
mypy = ">=0.750"
isort = ">=4.3.21"
toml = ">=0.10"
selenium = "==3.141.0"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
force_grid_wrap = 3
forced_separate = ["callisto"]
add_imports = "from __future__ import annotations"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
